# froxlor-migrator

./: .coverage  .gitignore  Makefile  README.md  config.docker.toml  config.example.toml  coverage.xml  main.py  pyproject.toml
froxlor_migrator/: api.py  config.py  froxlor_mysql.py  migrate.py  mysql_driver.py  mysql_tunnel.py  ssh_driver.py  transfer.py  tui.py  util.py  verify_migration.py
manifests/: auto-apply-custalpha-20260307-152935.json  auto-apply-custalpha-20260307-153006.json  auto-apply-custalpha-20260307-153050.json  auto-apply-custgamma-20260307-153052.json  bootstrap-apply-custalpha-20260307-155750.json  bootstrap-apply-custalpha-20260307-155815.json  bootstrap-apply-custalpha-20260307-160235.json  bootstrap-apply-custalpha-20260307-160302.json  bootstrap-apply-custalpha-20260307-161929.json  bootstrap-apply-custalpha-20260307-163737.json  bootstrap-apply-custalpha-20260307-163825.json  bootstrap-apply-custalpha-20260307-163848.json  bootstrap-apply-custalpha-20260307-163920.json  bootstrap-apply-custalpha-20260307-163948.json  bootstrap-apply-custalpha-20260307-185122.json  bootstrap-apply-custgamma-20260307-160237.json  bootstrap-apply-custgamma-20260307-160304.json  bootstrap-apply-custgamma-20260307-161931.json  bootstrap-apply-custgamma-20260307-163923.json  bootstrap-apply-custgamma-20260307-163951.json  bootstrap-apply-custgamma-20260307-185131.json  bootstrap-apply-custgamma-20260307-185255.json  bootstrap-apply-custgamma-20260307-190222.json  bootstrap-apply-custgamma-20260307-190303.json  bootstrap-apply-custgamma-20260307-190347.json  manual-apply-custalpha-full-scope.json  (+9 more)
(+53 files in other folders)
